# t1-rust

./: README.md
app-cli/: Cargo.toml
app-cli/data/: dados.csv  paises.csv  todos_paises.json
app-cli/src/: fato_random.rs  funcoes.rs  main.rs  paises.rs  teste.rs  tests.rs
