[package]
name = "app-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8.4"
csv = "1.1.6"
urlencoding = "2.0.0"
scraper = "0.19.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
colored = "2.0"
tempfile = "3.2.0"
